[metadata]
name = ln-markets
version = 1.0.0
author = Romain ROUPHAEL
author_email = romain.rouphael@ito.am
description = A simple way to connect your Python application to LN Markets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ln-markets/api-python
project_urls = 
    Bug Tracker = https://github.com/ln-markets/api-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
